# module-odbc

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README  README.md  qore-odbc-module.spec
docs/: Doxyfile.in  doxyfile.tmpl  mainpage.dox.tmpl
src/: EnumNumericOption.h  ErrorHelper.h  ODBCColumnSizeConstants.h  ODBCConnection.cpp  ODBCConnection.h  ODBCErrorHelper.h  ODBCOptions.h  ODBCPreparedStatement.cpp  ODBCPreparedStatement.h  ODBCResultColumn.h  ODBCStatement.cpp  ODBCStatement.h  ParamArrayHolder.h  ParamHolder.h  TempParamHolder.h  odbc-module.cpp  ql_odbc.qpp
test/: odbc.qtest
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
